--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ url = "2.5.0"
 # when copy-pasting this, please use a git dependency or make sure that you
 # have copied the example as it was at the time of the release you use.
 matrix-sdk = {version = "0.6.2", git = "https://github.com/matrix-org/matrix-rust-sdk.git", features = ["sso-login"] }
+
+crossterm = "*"
+ratatui = "*"
+tui-input = "*"
